<resources>
    <string name="app_name">TDAH</string>
    <string name="btn_usuario">Usuario</string>
    <string name="btn_terminos">Terminos</string>
    <string name="btn_psicologo">Psicologo</string>
    <string name="tvw_tdah">TDAH</string>
    <string name="btn_registrarse">Registrarse</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="tvw_usuario">Usuario</string>
    <string name="tvw_yatengo">Ya tengo una cuenta</string>
    <string name="etx_nombre_usuario">Nombre de usuario</string>
    <string name="etx_nombres">Nombre(s)</string>
    <string name="etx_apaterno">Apellido Paterno</string>
    <string name="etx_amaterno">Apellido Materno</string>
    <string name="etx_curp">Curp (padre o tutor)</string>
    <string name="etx_correo">Correo electronico</string>
    <string name="etx_contrasena">Contraseña</string>
    <string name="etx_nip">Nip (4 digitos)</string>
    <string name="tvw_ingresar">Ingresar</string>
    <string name="etx_ingresar_correo">Correo electronico</string>
    <string name="etx_ingresar_contrasena">Contraseña</string>
    <string name="btn_iniciar_sesion">Ingresar</string>
    <string name="btn_ingresar_cancelar">Cancelar</string>
    <string name="tvw_solicitar_registrarse">Quiero registrarme</string>
    <string name="logo">Logo</string>
    <string name="nombre_paciente">Nombre paciente</string>
    <string name="title_activity_menu_usuario">menu_usuario</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_psicologo_principal">PsicologoPrincipal</string>


    <string name="nav_menu_cuenta">Menu Cuenta</string>
    <string name="nav_menu_ayuda">Menu Ayuda</string>
    <string name="nav_menu_configuracion">Menu Configuración</string>

    <string name="nav_menu_informacion">Menu Informacion</string>
    <string name="nav_menu_mapas">Menu Mapas</string>
    <string name="nav_menu_psicologos">Menu Psicologos</string>

    <string name="cuenta_menu_psicologo">Cuenta</string>
    <string name="configuracion_nenu_psicologo">Configuración</string>
    <string name="ayuda_menu_psicologo">Ayuda</string>

    <string name="informacion_menu_padre">Informacion</string>
    <string name="mapas_menu_padre">Mapas</string>
    <string name="psicologos_menu_padre">Psicologos</string>

    <string name="title_menu_psicologo">TDAH Móvil</string>

    <string name="lbl_psicologo">Psicólogo</string>
    <string name="txt_NombrePsicologo">Nombre</string>
    <string name="txt_ApellidoP_Psicologo">Apellido Paterno</string>
    <string name="txt_ApellidoM_Psicologo">Apellido Materno</string>
    <string name="txt_Direccion_Consultorio">Dirección del Consultorio</string>
    <string name="txt_CorreoContacto_Psicologo">Correo de Contacto</string>
    <string name="txt_Telefono_Psicologo">Teléfono</string>
    <string name="txt_Cedula">Cédula Profesional</string>
    <string name="btn_Verificar_Cedula">Verificar Cédula</string>
    <string name="txt_descripcion">Descripción</string>
    <string name="btn_Editar_Psicologo">Editar</string>
    <string name="btn_Guardar_Psicologo">Guardar</string>

    <string name="txt_reportar_problema">Reportar Problema</string>
    <string name="txt_terminos_condiciones_psicologo">Términos y Condiciones</string>
    <string name="txt_aviso_privacidad">Aviso de Privacidad</string>


    <string name="error_campo_requerido">Campo requerido</string>
    <string name="error_correo_no_valido">Correo no valido</string>
    <string name="error_caracter_especial_requerido">Caracter especial requerido</string>
    <string name="error_numero_requerido">Se requiere un numero</string>
    <string name="error_no_se_encontraron_minusculas">Requiere minusculas</string>
    <string name="error_no_se_encontraron_mayusculas">Requiere mayusculas</string>
    <string name="error_contrasena_muy_corta">Requiere entre 8 y 15 caracteres</string>
    <string name="error_sin_espacios">No se aceptan espacios</string>
    <string name="error_formato_no_valido">Formato invalido</string>
    <string name="error_sin_espacios_inicio">No puede iniciar con espacio</string>
    <string name="error_cuatro_digitos">Debe contener solo 4 digitos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TDAH Móvil</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_actividad1">Actividad1</string>
    <string name="menu_actividad2">Actividad2</string>
    <string name="menu_actividad3">Actividad3</string>
    <string name="menu_libros">Audio-Libros</string>
    <string name="menu_padres">Apartado Padres</string>
    <string name="menu_cuenta">Cuenta</string>
    <string name="menu_configuracion">Ajustes</string>
    <string name="menu_inicio">Inicio</string>
    <string name="nip">Ingresa tu Nip a 4 digitos</string>
    <string name="nip2">****</string>
    <string name="editar">Editar</string>
    <string name="guardar">Guardar Cambios</string>
    <string name="regresar">Regresar</string>


    <string name="puntuacion_alta">Puntuación más alta</string>
    <string name="puntuacion">Puntuación actual</string>
    <string name="pregunta">¿Qué animal es?</string>
    <string name="animal">Imagen de animal</string>
    <string name="aceptar">Aceptar</string>
    <string name="contrase_a_nueva">Contraseña nueva</string>
    <string name="confirma_contrase_a">Confirma contraseña</string>
    <string name="error_contrasena_diferente">No es la misma contraseña</string>

    <string name="calle">Calle</string>
    <string name="num_exterior">N. Exterior</string>
    <string name="codigopostal">Codigo Postal</string>
    <string name="localidad">Localidad</string>
    <string name="municipio">Municipio</string>
    <string name="estado">Estado</string>

    <string name="lbl_domicilios">Datos consultorio</string>
    <string name="lbl_contacto">Contacto</string>
    <string name="lbl_profesional">Información Profesional</string>

    <string name="puntuacion_oro">Mi Putuacion</string>
    <string name="jugar">Jugar</string>
    <string name="puntuaciones">Puntuaciones</string>
    <string name="acercade">Acerca De</string>
    <string name="menu">Menu</string>
    <string name="error_numero_exterior">Longitud incorrecta</string>
    <string name="error_telefono_invalido">Telefono invalido</string>

    <string name="txtContador"> 0 </string>
    <string name="txtTiempo"> 0S </string>

    <string name="Anchotv"> -- </string>
    <string name="Altotv"> -- </string>

    <string name="SeAcaboTxt">¡Se acabo el tiempo!</string>
    <string name="RecolectadoTxt">Has recolectado</string>
    <string name="NumeroTxt"> -- </string>
    <string name="Jugardenuevo">Jugar De Nuevo</string>
    <string name="caratula">Caratula</string>
    <string name="titulo">Titulo</string>
    <string name="duracion">Duracion</string>
    <string name="tipo">tipo</string>
    <string name="error_nip_incorrecto">nip incorrecto</string>
    <string name="title_activity_mapa_centros">MapaCentros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio_psicologo">Inicio</string>


</resources>