<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cuenta_menu_psicologo"
            android:icon="@drawable/cuenta_psicologo"
            android:title="@string/cuenta_menu_psicologo" />

        <item
            android:id="@+id/configuracion_nenu_psicologo"
            android:icon="@drawable/configuracion_psicologo"
            android:title="@string/configuracion_nenu_psicologo" />

        <item
            android:id="@+id/ayuda_menu_psicologo"
            android:icon="@drawable/ayuda_psicologo"
            android:title="@string/ayuda_menu_psicologo" />

    </group>
</menu>