<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#72BEC3"
    tools:context=".RegistroPsicologo">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/lbl_psicologo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/lbl_psicologo"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/txt_nombre_psicologo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/etx_nombres"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_apellido_paterno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/etx_apaterno"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_apellido_materno"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/etx_amaterno"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/lbl_docimicilio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/lbl_domicilios"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/txt_calle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/calle"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_num_exterior"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/num_exterior"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_cp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/codigopostal"
                android:inputType="text|number"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <Spinner
                android:id="@+id/sp_estado"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:hint="@string/estado"
                tools:ignore="SpeakableTextPresentCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/sp_municipio"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/estado" />

                <Spinner
                    android:id="@+id/sp_localidad"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:hint="@string/estado" />

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_contacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/lbl_contacto"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/txt_telefono"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/txt_Telefono_Psicologo"
                android:inputType="phone"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_correo_psicologo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/etx_correo"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txt_contrasena_psicologo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/etx_contrasena"
                android:inputType="textPassword"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/lbl_profesional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/lbl_profesional"
                android:textAlignment="center"
                android:textSize="34sp" />

            <EditText
                android:id="@+id/txt_cedula_psicologo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:hint="@string/txt_Cedula"
                android:inputType="number"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <com.paypal.checkout.paymentbutton.PayPalButton
                android:id="@+id/payPalButton_psicologo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal_700"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <Button
                    android:id="@+id/btn_registrarse"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/btn_registrarse"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_cancelar"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="72dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/teal_700"
                    android:backgroundTintMode="add"
                    android:text="Cancelar"
                    android:textAlignment="center" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>